--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -5,3 +5,11 @@
 html{
   scroll-behavior: smooth;
 }
+
+.pc iframe{
+  width: 1000px;
+  height: 1000px;
+  border: none;
+  border-radius:50px;
+  overflow: hidden;
+}
