--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -3,10 +3,11 @@
 @tailwind utilities;
 
 @keyframes Fade {
-  0%{
+  0% {
     opacity: 0;
   }
-  100%{
+
+  100% {
     opacity: 100%;
   }
 }
@@ -22,7 +23,7 @@
   }
 } */
 
-.logo{
+.logo {
   /* animation: LogoScale 31s ease; */
   width: 12vw;
   height: auto;
@@ -33,17 +34,19 @@ html {
   /* font-family: 'Raleway', sans-serif; */
 }
 
-.main{
+.main {
   animation: Fade 1s forwards;
 }
 
-.dark{
+.dark {
   animation: Fade 0.5s forwards;
 }
 
 .bg-white2 {
   background-color: cadetblue;
 }
+
+
 
 /* 
 .pc iframe {
@@ -66,15 +69,25 @@ html {
   transform: rotate3d(.15, -.700, 0, 15deg) rotate(1deg) scale(1);
   transition: transform .3s ease;
   box-shadow:
-    2em 4em 6em -2em rgba(0,0,0,.5),
-    1em 2em 3.5em -2.5em rgba(0,0,0,.5);
+    2em 4em 6em -2em rgba(0, 0, 0, .5),
+    1em 2em 3.5em -2.5em rgba(0, 0, 0, .5);
+   
 }
 
-.rotate:hover{
+.rotate:hover {
   transform:
-  rotate3d(.2,.2,.2,0deg)
-  rotate(3deg)
-  scale(1.2)
+    rotate3d(.2, .2, .2, 0deg) rotate(3deg) translateZ(-3px) scale(1.2);
+
+}
+
+img {
+  transition: transform .3s ease;
+}
+
+img:hover {
+  transform:
+    rotate3d(.2, .2, .2, 1deg) rotate(3deg) translateZ(-3px) scale(1.1);
+  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(25, 74, 129, 0.65) 0px 4px 6px -1px, rgba(32, 89, 136, 0.08) 0px 1px 0px inset;
 }
 
 .glass {
