--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -76,18 +76,23 @@ html {
 
 .rotate:hover {
   transform:
-    rotate3d(.2, .2, .2, 0deg) rotate(3deg) translateZ(-3px) scale(1.2);
+    rotate3d(.2, .2, .2, 0deg) rotate(3deg) translateZ(-3px) scale(1.1);
 
 }
 
 img {
   transition: transform .3s ease;
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  background-size: cover;
+  border-radius: 10px;
 }
 
 img:hover {
   transform:
     rotate3d(.2, .2, .2, 1deg) rotate(3deg) translateZ(-3px) scale(1.1);
-  box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(25, 74, 129, 0.65) 0px 4px 6px -1px, rgba(32, 89, 136, 0.08) 0px 1px 0px inset;
+  /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(25, 74, 129, 0.65) 0px 4px 6px -1px, rgba(32, 89, 136, 0.08) 0px 1px 0px inset; */
 }
 
 .glass {
