--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -86,6 +86,15 @@ img:hover {
   /* border: 1px solid rgba(255, 255, 255, 0.18); */
 }
 
+.glass-less {
+  /* background: rgba(37, 37, 37, 0.35); */
+  box-shadow: 1px 1px 14px 2px rgba(93, 93, 93, 0.33);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(10px);
+  /* border-radius: 10px; */
+  /* border: 1px solid rgba(255, 255, 255, 0.18); */
+}
+
 .text-gradient {
   background-clip: text;
   -webkit-background-clip: text;
@@ -120,4 +129,5 @@ img:hover {
   resize: none;
   width: 100%;
   max-width: 100%;
+  background: none;
 }
