--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -72,8 +72,8 @@ img {
 }
 
 img:hover {
-  transform:
-    rotate3d(.2, .2, .2, 1deg) rotate(3deg) translateZ(-3px) scale(1.1);
+  /* transform:
+    rotate3d(.2, .2, .2, 1deg) rotate(3deg) translateZ(-3px) scale(1.1); */
   /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(25, 74, 129, 0.65) 0px 4px 6px -1px, rgba(32, 89, 136, 0.08) 0px 1px 0px inset; */
 }
 
