--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -19,6 +19,10 @@
   height: auto;
 }
 
+body{
+  background-color: #23232a;
+}
+
 html {
   scroll-behavior: smooth;
   /* font-family: 'Raleway', sans-serif; */
